# DatasetAgent

./: .gitignore  LICENSE  README.md  env_template  main.py  pyproject.toml
DatasetAgent/: state_graph.py
DatasetAgent/agents/: crawl_agent.py  discovery_agent.py  state.py
DatasetAgent/db/: db.py
DatasetAgent/nodes/: crawl_extract.py  discovery.py  routers.py
DatasetAgent/utils/: confidence_score.py  embedder.py  llm.py  logging.py  types.py  url.py
configs/: dataset_agent.yaml
scripts/: add_ipykernel.sh  spider.py  vllm_serve.sh  wait_for_vllm.py
state_agent/: agent.py  state_graph.py  utils.py
state_agent/nodes/: classify.py  discovery.py  download.py  extract.py  rescrape.py  save.py
state_agent/utils/: config.py  db.py  downloaders.py  models.py  parsing.py  routers.py  types.py
